--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
               Besides programming, I love biking, skiing and traveling
             </p>
             <span class="d-flex justify-content-around mt-3">
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume-russian.pdf">
                 View Resume in Russian
               </a>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
