add resume in english

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
               team, because result of our work depends on many people not only one person. I am constantly trying to get
               new knowledge and put it into practice. For example, I have developed a new line of activity in the
               company: vibration diagnostics. I also have experience in communicating with foreign partners in English,
-              I studied in English in Canada and Thailand.
+              studied in English in Canada and Thailand.
             </p>
             <p class="about-wrapper__info-text">
               Besides programming, I love biking, skiing and traveling
@@ -85,7 +85,7 @@
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume-russian.pdf">
                 View Resume in Russian
               </a>
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume-english.pdf">
                 View Resume in English
               </a>
             </span>
